# internal/controller/restapi/v1/models.go
@@ -1,0 +1,6 @@
+package v1
+
+type ModlistSummaryResponse struct {
+	ModlistName  string `json:"Name"`
+	ArchivesLink string `json:"link"`
+}
