# internal/controller/restapi/v1/v1.go
@@ -2,8 +2,12 @@
 package v1
 
 import (
+	"context"
+	"encoding/json"
+	"fmt"
 	"net/http"
 	"time"
+	"wabbajackModlistParser/internal/services/fetcher"
 	"wabbajackModlistParser/pkg/logger"
 
 	"github.com/go-chi/chi/v5"
@@ -15,21 +19,23 @@ type V1 struct {
 }
 
 // NewTestRoutes -.
-func NewTestRoutes(apiV1Group chi.Router, l logger.Interface) {
+func RegisterRoutes(apiV1Group chi.Router, l logger.Interface) {
 	h := &V1{l: l}
 
 	apiV1Group.Get("/status", h.apiStatus)
 	apiV1Group.Get("/health", h.healthCheck)
+	apiV1Group.Get("/modlists", h.getModlists)
 }
 
 // Health check endpoint
-// @Summary Health check
-// @Description Check if the API is running
-// @Tags health
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string]string
-// @Router /api/v1/health [get]
+//
+//	@Summary		Health check
+//	@Description	Check if the API is running
+//	@Tags			health
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]string
+//	@Router			/api/v1/health [get]
 func (h *V1) healthCheck(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
@@ -37,15 +43,41 @@ func (h *V1) healthCheck(w http.ResponseWriter, r *http.Request) {
 }
 
 // API status endpoint
-// @Summary API status
-// @Description Get API version and status
-// @Tags api
-// @Accept json
-// @Produce json
-// @Success 200 {object} map[string]string
-// @Router /api/v1/status [get]
+//
+//	@Summary		API status
+//	@Description	Get API version and status
+//	@Tags			api
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	map[string]string
+//	@Router			/api/v1/status [get]
 func (h *V1) apiStatus(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte(`{"api": "v1", "status": "running", "version": "1.0.0"}`))
+}
+
+// Get all modlists
+//
+//	@Summary		Get all modlists
+//	@Description	Retrieve a list of all available modlists with their details
+//	@Tags			modlists
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{array}		ModlistSummaryResponse
+//	@Failure		500	{object}	map[string]string	"Internal server error"
+//	@Router			/api/v1/modlists [get]
+func (h *V1) getModlists(w http.ResponseWriter, r *http.Request) {
+	modlists, err := fetcher.GetModlistSummary(context.TODO())
+	if err != nil {
+		http.Error(w, fmt.Sprintf("fetcher failed: %v", err), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+
+	if err := json.NewEncoder(w).Encode(modlists); err != nil {
+		http.Error(w, fmt.Sprintf("JSON encode failed: %v", err), http.StatusInternalServerError)
+		return
+	}
 }
